--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-# ---------------- #
+﻿# ---------------- #
 #   Main Configs   #
 # ---------------- #
 baseurl: 
-url: https://mazhuang.org/jekyll-theme-solid
+url: https://hixiaodai.github.io/
 date_format: "ordinal"
 title: jekyll-theme-solid
 author: Zhuang Ma 
